# declarative

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  README.md  declarative.cabal  stack-travis.yaml  stack.yaml
lib/Numeric/: MCMC.hs
lib/Numeric/MCMC/: Anneal.hs
test/: Rosenbrock.hs
