name:                declarative
version:             0.1.0.0
synopsis:            DIY Markov Chains.
homepage:            http://github.com/jtobin/declarative
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Math
build-type:          Simple
cabal-version:       >=1.10
description:
  DIY Markov Chains.

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
    Numeric.MCMC
  build-depends:
      base              < 5
    , mcmc-types        >= 1.0.1
    , mwc-probability   >= 1.0.1
    , mighty-metropolis >= 1.0.1
    , lens              >= 4 && < 5
    , primitive
    , pipes             >= 4 && < 5
    , hasty-hamiltonian >= 1.1.1
    , speedy-slice      >= 0.1.2
    , transformers

